--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["94768535137@s.whatsapp.net"],
-    "ownerName": "DINUWA LK OFFICIAL BOT",
-    "instagram" : "https://instagram.com/dinuwa_lk._",
+    "ownerNumber": ["94714748719@s.whatsapp.net"],
+    "ownerName": "lochana_lk",
+    "instagram" : "https://instagram.com/lochana_lk._",
     "botName": "Pizzaa🐧-Mdོ ",
-    "footer": "http://dinuwa-lk.github.io",
+    "footer": "https://chat.whatsapp.com/FOdBLiXqmjPFTYkqDhncmz.io",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
